tests/parsing/const_redefinition_in_pkg/stderr.golden
error: redefinition of constant 'FOO' in package 'pkg'
fbd/pkg/b.fbd +1:7
   |
 1 | const FOO = 2
   |       ^^^
fbd/pkg/a.fbd +1:7
   |
 1 | const FOO = 1
   |       ^^^
